tests/fixtures/syntax/invalid/file_text_equals_fixture_reference.repor
case "file text_equals expected text requires a TextValue, not a fixture reference" {
  $ true
  assert {
    file <"out.txt"> text_equals @"expected.txt"
  }
}
